--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,52 @@
 /target/
+#Eclipse Begginning
+.settings/
+.classpath
+.project
+bin/
+*.log
+#Eclipse Begginning
+
+#Maven beginning
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+#Maven Ending
+
+#Idea Begginning
+.idea/
+*.iml
+out/
+gen/
+idea-gitignore.jar
+resources/templates.list
+resources/gitignore/*
+build/
+build.properties
+junit*.properties
+IgnoreLexer.java
+.gradle
+.DS_Store
+/verification
+#Idea Ending
+
+#Gradle beginning
+.gradle
+**/build/
+!src/**/build/
+# Ignore Gradle GUI config
+gradle-app.setting
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+# Cache of project
+.gradletasknamecache
+# Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+#Gradle Ending
